# Vybe

./: .coverage  .env.example  .gitignore  AUTOMATED_TESTS.md  AUTOMATED_TESTS_CHECKLIST.md  COMMERCIAL_USE_NOTICE.md  FINAL_TEST_REPORT.md  INCIDENT_RESPONSE.md  Justfile  Procfile  Procfile.dev  QUEST_TRACKER.md  README.md  Reliability.md  TESTING_GUIDE.md  TEST_FIX_SUMMARY.md  TEST_RESULTS.md  Vybe-PRD.md  app.py  docker-compose.yml  flake.nix  pyproject.toml  report2.md  report4.md  run.py  sync_quests_from_issues.py
.docs/: BACKEND_AUDIT.md  BACKEND_SYSTEM_DESIGN.md  README_SHORT.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
app/: __init__.py  config.py  database.py
backend/: .env.example  __init__.py  pyproject.toml
backend/app/: __init__.py  database.py  errors.py
backend/app/config/: __init__.py  database.py  errors.py  settings.py
backend/app/controllers/: __init__.py  base_controller.py  event_controller.py  url_controller.py  user_controller.py
backend/app/middleware/: __init__.py
backend/app/models/: __init__.py  event.py  event_model.py  link.py  url_model.py  user.py  user_model.py
backend/app/repositories/: __init__.py  base_repository.py  event_repository.py  url_repository.py  user_repository.py
backend/app/routes/: __init__.py  api.py  event_routes.py  link_routes.py  metrics_routes.py  redirect.py  url_routes.py  user_routes.py
backend/app/services/: __init__.py  event_service.py  url_service.py  url_shortener.py  user_service.py
backend/app/utils/: __init__.py  cache.py  codecs.py  urls.py
backend/app/validators/: schemas.py
backend/data/: events.csv  urls.csv  users.csv
docs/: Production Engineering_ Quest Log.md  api.md
frontend/: .env.example  README.md  (+7 more)
(+172 files in other folders)
