[project]
name = "mlh-pe-hackathon"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.0.0",
    "faker>=33.0",
    "flask>=3.1",
    "flask-limiter>=3.8.0",
    "gunicorn>=25.3.0",
    "peewee>=3.17.0,<4.0",
    "prometheus-client>=0.25.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "redis>=5.0.0",
    "sentry-sdk[flask]>=2.57.0",
    "email-validator>=2.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "testcontainers[postgres]>=4.14.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
addopts = "--cov=backend/app --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
pythonpath = ["."]
